--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-router": "^0.0.1",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "mongoose": "^8.0.3",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
