--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "mysql2": "^3.5.2",
-    "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
