--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
