--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-pets-",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -16,7 +16,7 @@
     "express-handlebars": "^7.1.2",
     "express-router": "^0.0.1",
     "express-session": "^1.17.3",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
